refactor: Payment 생성자 수정